fix spacing

--- a/source/stylesheets/books/list.scss
+++ b/source/stylesheets/books/list.scss
@@ -11,7 +11,7 @@
     }
 
     li {
-        padding:2em 0;
+        padding:1em 0 0 0;
     }
 
     .date {
